# mirumoji

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  launcher.py
.github/: CONTRIBUTING.md  README.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: backend-build_push_cpu.yaml  backend-build_push_gpu.yaml  backend-build_push_modal.yaml  backend-licenses.yaml  build_release.yaml  cli-pypi_release.yaml  frontend-build_push.yaml  frontend-licenses.yaml  frontend-publish_preview.yaml
apps/cli/: launcher.py
apps/cli/mirumoji/: README.md  pyproject.toml
apps/frontend/: Dockerfile  package-lock.json
compose/: docker-compose.cpu.dockerpull.yaml  docker-compose.cpu.yaml  docker-compose.gpu.dockerpull.yaml  docker-compose.gpu.yaml  docker-compose.local.cpu.yaml  docker-compose.local.gpu.yaml
docs/: CODE_OF_CONDUCT.md  README.md  SECURITY.md
docs/licenses/licenses-cli/: BSD3.md  NOTICE.md
